4/12/12 #3304 Fixed: Exception when attempting to authenticate mongodb when there is no internet connection, resolves #3304
4/2/12 Added convenience method Pairs.pair so pairs can be constructed with "pair(a,b)" instead of "new Pair<MyLongTypeNameForTypeA,MyLongTypeNameForTypeB>(a,b)"
4/2/12 Added Clock.addSimulationTimeChangeListener
3/23/12 #3260 Changed replacement to "\\t" so it will render as "\t" with no tab
3/23/12 #3260 Factored out null string in Parameter, use "\\\\t" as replacement for "\t", added test main
3/21/12 #3225 renamed ParameterSet.add => ParameterSet.with
3/21/12 #3229 Removed WhatIsMountainTime and WhatIsMyIPAddress
3/21/12 #3260 Verify that no delimiters appear in sim sharing parameters
3/19/12 #3204 eliminated stray "textFieldCommitted" message that was occurring in RPAL Game
3/13/12 #3285 add support for testing if sim-sharing is running with a specific configuration
3/13/12 #3283, sim-sharing fixes for spinners
3/13/12 #3284 add Parameter(IParameterKey, IParameterValue) constructor
3/12/12 add "isSelected" parameter to SimSharingJCheckBoxMenuItem user messages
2/28/12 #3267 address sim-sharing problems in SimSharingJSpinner
2/15/12 #3258 created SimSharingJTextField
2/12/12 Moved Property.valueEquals to ObservableProperty
2/6/12 simsharing: Improve sim sharing for purposes of developing (e.g. test mains): SimSharingManager.getInstance doesn't require init() and default config doesn't send to server
2/2/12 simsharing: factor out duplication of component/type/action throughout SimSharingJ* classes
2/2/12 #3223, simplify SimSharingDragListener, which retaining same functionality (ability to specify IUserComponent and customize ParameterSet)
2/2/12 #3223, make Property* Swing components subclass SimSharingJ*, replace and delete SimSharingProperty* classes
2/2/12 i18n of WavelengthControl
1/27/12 Simsharing: Added basic authentication, see #3231
1/26/12 Simsharing: Added study for dallas that requires user id